src/test/run-pass/unboxed-closures-unboxing-shim.rs
// Copyright 2014 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

#![feature(unboxed_closures, unboxed_closure_sugar)]

use std::ops::FnOnce;

fn main() {
    let task: Box<|: int| -> int> = box |: x| x;
    assert!(task.call_once((1234i,)) == 1234i);
}

